--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,4 +21,7 @@ jobs:
           echo ${{ secrets.GITHUB_TOKEN }} | \
           docker login ghcr.io -u valerauko --password-stdin
       - name: Push Docker image
-        run: docker -D push "ghcr.io/${{ steps.build-image.outputs.image }}"
+        run: |
+          image=${{ steps.build-image.outputs.image }}
+          docker tag "$image" "ghcr.io/$image"
+          docker -D push "ghcr.io/$image"
