--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -20,6 +20,17 @@ spec:
           ports:
             - name: http
               containerPort: 8080
+          env:
+            - name: CIVO_API_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: "civo-api-secret"
+                  key: TOKEN
+            - name: CIVO_API_REGION
+              valueFrom:
+                secretKeyRef:
+                  name: "civo-api-secret"
+                  key: REGION
           livenessProbe:
             httpGet:
               path: /health
