Add certificates to image

--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -10,6 +10,10 @@ RUN go build
 
 FROM debian:buster
 
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends ca-certificates && \
+    rm -rf /var/lib/apt/lists/*
+
 COPY --from=builder /go/src/github.com/valerauko/panther/panther .
 
 CMD ["./panther"]
